# AppAttestVerifyKit

./: .gitignore  Package.swift  README.md
Examples/AppAttestVerifyDemo/AppAttestVerifyDemo/: AppAttestVerifyDemoApp.swift  AppAttestVerifyDemoView.swift  AppAttestVerifyDemoViewModel.swift
Examples/AppAttestVerifyDemo/AppAttestVerifyDemo.xcodeproj/: project.pbxproj
Rust/AppAttestVerifierFFI/: Cargo.toml
Rust/AppAttestVerifierFFI/include/: AppAttestVerifierFFI.h  module.modulemap
Rust/AppAttestVerifierFFI/src/: lib.rs
Scripts/: build-xcframework.sh  package-release-binary.sh
Sources/AppAttestVerifyKit/: AppAttestVerificationError.swift  AppAttestVerifier.swift  AppAttestVerifyKit.swift  ApplicationSupportAttestationStateStore.swift  DataCoding.swift  TrustAnchor.swift  VerificationModels.swift  VerifiedAttestationState.swift
Tests/AppAttestVerifyKitTests/: AppAttestVerifyKitTests.swift
Tests/AppAttestVerifyKitTests/Fixtures/anchors/: apple_app_attestation_root_ca.pem
